# iot-app-fw

./: .gitignore  AUTHORS  COPYING  Doxyfile  Makefile.am  README  README.md  configure.ac
build-aux/: gen-linker-script
data/templates/ostro/agentless/: macros.inc  no-container.inc  nspawn-app.inc  nspawn-shared.inc  nspawn-system.inc  service.template
data/templates/ostro/host/: firewall.template  macros.inc  no-container.inc  nspawn-app.inc  nspawn-shared.inc  nspawn-system.inc  service.template
data/templates/ostro/self/: container-preset.template  macros.inc  nspawn-app.inc  nspawn-shared.inc  nspawn-system.inc  service.template  system-tmpfs.template
doc/: example.manifest
m4/: node-js.m4  pythoncfg.m4
manifests/common/: editor.manifest
manifests/user/kli/: terminal.manifest
packaging.in/: build-rpm.sh  iot-app-framework.spec.in  iot-launch.service  iot-launch.service-socket.in  iot-launch.service.in  iot-launch.socket.in  iotpm-register-apps.service.in
src/: Makefile.am  app.h  common.h  iot-launch-agent  utils.h
src/adduser/: adduser.c
src/app/: app.c  app.h  iot-app.pc.in
src/app/tests/: event-catch.c  event-send.c  event-test.c  list-test.c
src/common/: debug.c  debug.h  dgram-transport.c  ecore-glue.c  ecore-glue.h  env.c  env.h  file-utils.c  file-utils.h  fragbuf.c  fragbuf.h  glib-glue.c  glib-glue.h  hash-table.c  hash-table.h  hashtbl.h  iot-common.pc.in  iot-ecore.pc.in  iot-glib.pc.in  iot-pulse.pc.in  iot-qt.pc.in  iot-uv.pc.in  json.c  json.h  list.h  log.c  log.h  macros.h  mainloop.c  mainloop.h  mask.h  mm.c  mm.h  pulse-glue.c  pulse-glue.h  qt-glue-priv.h  qt-glue.cpp  qt-glue.h  refcnt.h  regexp-libc.c  (+12 more)
src/generators/helpers/: exec.c
src/generators/patches/systemd/222/: 0002-nspawn-added-support-for-starting-DHCP-client-in-non.patch
src/generators/patches/systemd/228/: 0001-nspawn-don-t-check-binary-OS-tree-before-all-mounts-.patch  0002-nspawn-added-support-for-starting-DHCP-client-in-non.patch
src/generators/service/: application.c  config.c  container-nspawn.c  container.c  discover.c  filesystem.c  generator.c  generator.h  key-handlers.c  log.c  manifest-keys.c  manifest.c  manifest.sample  mount.c  scriptlet.c  self.c  service.c  service.jmpl  service.jmpl.fedora  template.c
src/generators/service/preprocessors/: convert-manifest.c  whitelist-groups.c
src/generators/service/systemd/: applications.target
src/generators/service/templates/ostro/: container-none.inc  container-nspawn.inc  firewall.smpl  macros.inc  no-container.inc  nspawn-basic.inc  nspawn-system.inc  service.smpl  service.template
src/java/: AppFw.c  build.sh.in  clean.sh.in
src/java/com/intel/ostro/appfw/: AppFw.java  AppFwException.java  EventCallback.java  EventSendCallback.java  EventSendCallbackData.java  IDCounter.java  IoTApplication.java  ListCallback.java  ListCallbackData.java  StatusCallback.java  TargetApplication.java
src/java/tests/: EventTest.java  ListTest.java  eventtest  listtest
src/java/tests/ArgParser/: ArgParser.java  Command.java  CommandWithArg.java
src/jmpl/: 1-DESIGN  README  eval.c  jmpl-test.c  jmpl-types.h  jmpl.c  jmpl.h  parser.c  parser.h  scanner.c  service.jmpl  symtab.c  test.jmpl  test.json
src/launcher/: iot-launch.h
src/launcher/client/: launch.c
src/launcher/daemon/: application.c  application.h  cgroup.c  cgroup.h  client.c  client.h  config.c  config.h  daemon.c  event.c  event.h  launcher.h  message.c  message.h  msg.c  msg.h  nftables.c  privilege.c  privilege.h  security-manager.c  signal.c  signal.h  transport.c  transport.h  valgrind.c  valgrind.h
src/nodejs/: binding.gyp  binding.gyp.in  event-catch.js  event-send.js  iot-appfw-test.js  package.json
src/nodejs/src/: appfw.cpp  node-appfw.cpp
src/nodejs/tests/: event-send.js  iot-appfw-test.js  list-apps.js  tick-tock.js
src/package-manager/: backend.h  iotpm.c  iotpm.h  manifest.c  manifest.h  options.c  options.h  pkginfo.c  pkginfo.h  rpm4-backend.c  rpm5-backend.c  rpmx-backend.c  rpmx-backend.h  security-manager.c  security-manager.h
src/package-manager/register/: register-preinstalled-apps.in
src/package-manager/sample/: hello-world.c  hello-world.manifest.in
src/package-manager/test/: hello-world.spec
src/python/: .gitignore  appfw.py  python-app-fw-wrapper.cpp  setup.py.in
src/python/tests/: event-catch.py  event-send.py  event-test.py
src/smpl/: README  addon.c  buffer.c  builtin-functions.c  data-json.c  errors.c  errors.h  expr.c  json.c  macros.h  parser.c  preproc.c  result.c  smpl-test.c  smpl.c  smpl.h  symtbl.c  template-block.c  template-branch.c  template-function.c  template-loop.c  template-macro.c  template-switch.c  template-text.c  template-vref.c  template.c  types.h  varref.c
src/utils/: appid.c  appid.h  identity.c  identity.h  iot-utils.pc.in  manifest.c  manifest.h  memchk.c  memsize.c  memsize.h
src/utils/tests/: manifest-test.c
utils/: collect-symbols.c
